# Transcribe-Anywhare

./: .env  .gitignore  README.md  main.py  pyproject.toml  reference.yml  requirements.txt
src/: audio_processor.py  audio_recorder.py  clipboard_handler.py  gui.py  hotkey_manager.py  logger_setup.py  transcriber.py
